--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Kaushal Patel Portfolio Website (DA-IICT) | KrazyKaushal Web Developer"
+      content="Kaushal Patel Portfolio Website (DA-IICT) | Kaushal Patel Web Developer"
     />
     <meta name="copyrighted-site-verification" content="c5ab4b21e5ce9aa7" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>KrazyKaushal Portfolio</title>
+    <title>Kaushal Patel | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
